<resources>
    <string name="app_name" translatable="false">Lightning Buddy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- API KEYS -->
    <string name="Maps_API" translatable="false">AIzaSyB6a3H7qUxi-pXKneCVCmSgMr6vJwxn7Kc</string>


    <string name="resetSettingsMessage">All saved areas will be deleted and settings will be restored to default. \nDo
        you wish to continue?
    </string>
    <string name="termsOfService">
        Terms and conditions\n

        These terms and conditions ("Terms", "Agreement") are an agreement between Mobile Application Developer ("Mobile Application Developer", "us", "we" or "our") and you ("User", "you" or "your"). This Agreement sets forth the general terms and conditions of your use of the Lightning Buddy mobile application and any of its products or services (collectively, "Mobile Application" or "Services").

        \n\nBackups\n

        We are not responsible for Content residing in the Mobile Application. In no event shall we be held liable for any loss of any Content. It is your sole responsibility to maintain appropriate backup of your Content. Notwithstanding the foregoing, on some occasions and in certain circumstances, with absolutely no obligation, we may be able to restore some or all of your data that has been deleted as of a certain date and time when we may have backed up data for our own purposes. We make no guarantee that the data you need will be available.

        \n\nLinks to other mobile applications\n

        Although this Mobile Application may link to other mobile applications, we are not, directly or indirectly, implying any approval, association, sponsorship, endorsement, or affiliation with any linked mobile application, unless specifically stated herein. We are not responsible for examining or evaluating, and we do not warrant the offerings of, any businesses or individuals or the content of their mobile applications. We do not assume any responsibility or liability for the actions, products, services, and content of any other third-parties. You should carefully review the legal statements and other conditions of use of any mobile application which you access through a link from this Mobile Application. Your linking to any other off-site mobile applications is at your own risk.

        \n\nChanges and amendments\n

        We reserve the right to modify this Agreement or its policies relating to the Mobile Application or Services at any time, effective upon posting of an updated version of this Agreement in the Mobile Application. When we do, we will send you an email to notify you. Continued use of the Mobile Application after any such changes shall constitute your consent to such changes. Policy was created with https://www.WebsitePolicies.com

        \n\nAcceptance of these terms\n

        You acknowledge that you have read this Agreement and agree to all its terms and conditions. By using the Mobile Application or its Services you agree to be bound by this Agreement. If you do not agree to abide by the terms of this Agreement, you are not authorized to use or access the Mobile Application and its Services.

        \n\nContacting us\n

        If you have any questions about this Agreement, please contact us.

        \n\nThis document was last updated on May 11, 2019
    </string>
    <string name="lightningDataFrequency" translatable="false">5</string>

    <string name="dark_mode">Dark mode</string>
    <string name="general">General</string>
    <string name="use_Location">Use my location</string>
    <string name="notifications">Notifications</string>
    <string name="allow_Notifications">Allow notifications</string>
    <string name="vibrate">Vibrate</string>
    <string name="about">About</string>
    <string name="termsOfServiceTitle">Terms of service</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="accept">I accept</string>
    <string name="decline">I decline</string>
    <string name="invalidEmail">Invalid email</string>
    <string name="ok">Ok</string>
    <string name="email">Email</string>
    <string name="menu">Menu</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>
    <string name="every">Every</string>
    <string name="minutes">minutes</string>
    <string name="dataUpdateFrequency">Data update frequency</string>
    <string name="noUpdates">No updates</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="slider1_Title">Welcome to Lightning Buddy!</string>
    <string name="slider1_description">Now, you will be able to see where lightning storms are happening close to you! Check out the map for a live view of where all the most recent lightning strikes have struck.</string>
    <string name="slider2_Title">Get notified about lightning strikes!</string>
    <string name="slider2_description">
        Use the map and set location where you would like to get notified about lightning storms so that you can remain
        safe and informed! You can also adjust the radius around your location for where would like to get notified.
    </string>
    <string name="slider3_Title">Help us make the app even better!</string>
    <string name="slider3_description">
        In the settings panel you can send us feedback on our app. This will help us making the app even better
        and by that we can increase your user experience!
    </string>
    <string name="save">Save</string>
    <string name="notification_title">New lightning detected</string>
    <string name="notification_content">New lightning detected at:</string>
    <string name="localNotificationContent">High chance of lightning in your local area!</string>
    <string name="notificationForecastTitle">Lightning forecast</string>
    <string name="localForecastNotificationContent">is expected in your local area at  </string>

    <!--Radius fragment-->
    <string name="meter">meters</string>
    <string name="user_radius_text">To receive notifications when you are about to enter a location with forecasted lightning storms in the near future, please set the radius you wish to be notified in.</string>
    <string name="set">Set</string>
    <string name="km" translatable="false">km</string>
    <string name="marker_radius_text">Set the radius for the location you wish to to be notified about lightning in.</string>

    <!--Lighning History-->
    <string name="lightningHistory">Lightning History</string>
    <string name="defaultSearchHint">Search</string>
    <string name="areaSearchLabel">Select an area</string>
    <string name="fromDateLabel">From date</string>
    <string name="toDateLabel">To date</string>
    <string name="errorFromDate">Please select a date from</string>
    <string name="errorToDate">Please select a date to</string>
    <string name="invalidTimePeriod">Invalid time period!</string>
    <string name="loadingData">Loading data...</string>
    <string name="generateLightning">Generating lightning...</string>
    <string name="noDataForPeriod">There was no data for this place/period, please try again!</string>
    <string name="Close">Close</string>
    <string name="radius">Radius</string>

    <string name="giveFeedback">Give feedback</string>
    <string name="call_for_help">Call for help</string>
    <string name="police_phone">tel:112</string>
    <string name="wrongInputMarkerSave">Saved marker name can not be empty</string>
    <string name="notificationRadiusSet">Notification radius set</string>
    <string name="radiusNotLessThan">Radius can not be less than</string>
    <string name="markerSaved">Marker saved</string>
    <string name="saveMarkerDescText">Marker name:</string>

    <string name="logo" translatable="false">Logo</string>
    <string name="set_time">Set time</string>
    <string name="end_time">End Time</string>
    <string name="start_time">Start Time</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="toNextDay">to next day</string>
    <string name="noTimeHasBeenSet">No time has been set</string>
    <string name="pleaseSelectTimeFrom">Please select time from</string>
    <string name="pleaseSelectTimeTo">Please select time to</string>
    <string name="theNotificationsWillNotBePushedFrom">You will not receive notifications from</string>


</resources>
