<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="25dp">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:text="@string/set_time"
            android:textSize="24sp"/>


    <TextView
            android:id="@+id/fromTimeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_time"
            android:textSize="18sp"/>

    <EditText
            android:id="@+id/fromTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time"
            android:focusable="false"
            android:layout_marginBottom="6dp"/>

    <TextView
            android:id="@+id/toTimeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end_time"
            android:textSize="18sp"/>

    <EditText
            android:id="@+id/toTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time"
            android:focusable="false"/>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
        <Button
                android:id="@+id/add_Button"
                android:text="@string/ok"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>